# Business-Landing-Page-Template

./: .replit  formfiller.py  package-lock.json  package.json  pyproject.toml  stock_data_cache.pkl
attached_assets/: MPT copilot,glide.py
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: Navbar.tsx
client/src/components/home/: Features.tsx  Hero.tsx
client/src/components/layout/: Header.tsx
client/src/components/ui/: button.tsx
client/src/components/ui/chatbot/: Chatbot.tsx
client/src/components/ui/patterns/: WavePattern.tsx
client/src/hooks/: use-auth.tsx
client/src/lib/: currency.ts  protected-route.tsx
client/src/pages/: Auth.tsx  ClientDashboard.tsx  ClientList.tsx  Dashboard.tsx  NewClient.tsx  NewGoal.tsx
knowledge/: README.md
server/: auth.ts  chat_processor.py  index.ts  notportfolio_optimizer.py  notportfolio_optimizerPerplexity.py  portfolio_optimizer.py  routes.ts  storage.ts
server/routes/: chat.ts
shared/: schema.ts
